@@ -16253,3 +16253,6 @@ failed: dhcp with excluded address
 ---------------------------------- 2024-10-20 07:34:16 24.10.20
 no failed: dhcp with excluded address
 qc pass: dhcp with excluded address
+---------------------------------- 2024-11-02 07:44:58 24.11.2
+no qc pass: dhcp with excluded address
+failed: dhcp with excluded address
